[package]
name = "counter"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde_json = "1.0.137"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer", "unstable-oracles"] }
tokio = { version = "1.39.3", features = ["rt", "sync"] }

[dev-dependencies]
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test"] }

[[bin]]
name = "counter_contract"
path = "src/contract.rs"

[[bin]]
name = "counter_service"
path = "src/service.rs"
